--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel = "stylesheet" href="style.css"/>
 </head>
 <body>
+    <h1>Etch-A-Sketch</h1>
+    <div class = "grid-container "></div>
     <button>size?</button>
-    <div class = "grid-container ">
-    </div>
     <script src="js.js"></script>
 </body>
 </html>
