--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
     <h1>Etch-A-Sketch</h1>
     <div class = "grid-container "></div>
-    <button>size?</button>
+    <div class = "UI-container">
+        <button>size?</button>
+        <div>Pen Color:<input type="color" id="pen-color"></div>
+        <button class = "eraser">
+            <img src="img/eraser.png" alt ="eraser">
+        </button>
+        <button id = "clear">Clear</button>
+        <button id = "rainbow">Rainbow Pen</button>
+    </div>
     <script src="js.js"></script>
 </body>
 </html>
