--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <div class = "UI-container">
         <button>size?</button>
         <div>Pen Color:<input type="color" id="pen-color"></div>
-        <button class = "eraser">
-            <img src="img/eraser.png" alt ="eraser">
-        </button>
         <button id = "clear">Clear</button>
-        <button id = "rainbow">Rainbow Pen</button>
+        <button id = "eraser" class = "color-choice">Eraser</button>
+        <button id = "rainbow" class = "color-choice">Rainbow Pen</button>
+        <button id = "gray" class = "color-choice">Shadow</button>
     </div>
     <script src="js.js"></script>
 </body>
