add buttons, precise and hover

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class = "UI-container">
         <button>size?</button>
         <div>Pen Color:<input type="color" id="pen-color"></div>
+        <button id = "precise">precise pen</button>
+        <button id="hover">hover pen(default)</button>
         <button id = "clear">Clear</button>
         <button id = "eraser" class = "color-choice">Eraser</button>
         <button id = "rainbow" class = "color-choice">Rainbow Pen</button>
