--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Etch-A-Sketch</h1>
     <div class = "grid-container "></div>
     <div class = "UI-container">
-        <button>size?</button>
+        <div id = "sizeValue">16 x 16</div>
+        <input id="sizeSlider" type = "range" value = "16" min = "1" max = "64">
         <div>Pen Color:<input type="color" id="pen-color"></div>
         <button id = "precise">precise pen</button>
         <button id="hover">hover pen(default)</button>
