--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel = "stylesheet" href="style.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"/>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Etch-A-Sketch</h1>
-    <div class = "grid-container "></div>
-    <div class = "UI-container">
-        <div id = "sizeValue">16 x 16</div>
-        <input id="sizeSlider" type = "range" value = "16" min = "1" max = "64">
-        <div>Pen Color:<input type="color" id="pen-color"></div>
-        <button id = "precise">precise pen</button>
-        <button id="hover">hover pen(default)</button>
-        <button id = "clear">Clear</button>
-        <button id = "eraser" class = "color-choice">Eraser</button>
-        <button id = "rainbow" class = "color-choice">Rainbow Pen</button>
-        <button id = "gray" class = "color-choice">Shadow</button>
+    <div class="main-container">
+      <div class="UI-container">
+        <div id="sizeValue">16 x 16</div>
+        <input id="sizeSlider" type="range" value="16" min="1" max="64" />
+        <div><input type="color" id="pen-color"/></div>
+        <button id="precise">Precise Pen</button>
+        <button id="hover">Hover Pen(default)</button>
+        <button id="clear">Clear</button>
+        <button id="eraser" class="color-choice">Eraser</button>
+        <button id="rainbow" class="color-choice">Rainbow Pen</button>
+        <button id="gray" class="color-choice">Shadow</button>
+      </div>
+      <div class="grid-container"></div>
     </div>
+    <footer class="footer">
+      Copyright © The Odin Project 2022
+      <a href="https://github.com/spookyflame10" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </footer>
     <script src="js.js"></script>
-</body>
+  </body>
 </html>
