--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="grid-container"></div>
     </div>
     <footer class="footer">
-      Copyright © The Odin Project 2022
+      Copyright © Bob Inc 2022
       <a href="https://github.com/spookyflame10" target="_blank">
         <i class="fab fa-github"></i>
       </a>
